feat: 支持x86构建 & 清理输出目录

--- a/gui/package.json
+++ b/gui/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview",
     "tauri": "tauri",
     "tauri:dev": "tauri dev",
-    "tauri:build": "tauri build"
+    "tauri:build": "tauri build",
+    "tauri:build:x86_64": "tauri build --target x86_64-apple-darwin",
+    "tauri:build:aarch64": "tauri build --target aarch64-apple-darwin"
   },
   "dependencies": {
     "@ant-design/icons": "^6.1.0",
