--- a/gui/package.json
+++ b/gui/package.json
@@ -16,7 +16,9 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.1.0",
+    "@fontsource/dm-sans": "^5.2.8",
     "@fontsource/outfit": "^5.2.8",
+    "@fontsource/plus-jakarta-sans": "^5.2.8",
     "@tauri-apps/plugin-dialog": "^2.4.2",
     "@tauri-apps/plugin-shell": "^2.3.3",
     "antd": "^6.1.1",
